
    HDFS-11785. Backport HDFS-9902 to branch-2.7: Support different values of
    dfs.datanode.du.reserved per storage type. (Brahma Reddy Battula)

    HDFS-7990. IBR delete ack should not be delayed. (Daryn Sharp.
    Backport HDFS-11838 by Vinitha Gankidi)

    HDFS-9726. Refactor IBR code to a new class. (Tsz-Wo Nicholas Sze
    Backport HDFS-11839 by Vinitha Reddy Gankidi)

  OPTIMIZATIONS

    HDFS-10896. Move lock logging logic from FSNamesystem into FSNamesystemLock.
    (Erik Krogen via Zhe Zhang)

    HDFS-11634. Optimize BlockIterator when iterating starts in the middle.
    (shv)

    HDFS-11384. Balancer disperses getBlocks calls to avoid NameNode's rpc queue
    saturation. (shv)

    HDFS-9412. getBlocks occupies FSLock and takes too long to complete.
    Contributed by He Tianyi. Backport HDFS-11855 by Vinitha Reddy Gankidi.

    HDFS-9710. DN can be configured to send block receipt IBRs in batches.
    (Tsz-Wo Nicholas Sze. Backport HDFS-11837 by Vinitha Reddy Gankidi)

  BUG FIXES
   
    HDFS-8307. Spurious DNS Queries from hdfs shell. (Andres Perez via aengineer)

    HDFS-9696. Garbage snapshot records linger forever. (kihwal)

    HDFS-9601. NNThroughputBenchmark.BlockReportStats should handle
    NotReplicatedYetException on adding block. (iwasakims)

    HDFS-10691. FileDistribution fails in hdfs oiv command due to
    ArrayIndexOutOfBoundsException. (Yiqun Lin via aajisaka)

    HDFS-10763. Open files can leak permanently due to inconsistent
    lease update (kihwal)

    HDFS-9745. TestSecureNNWithQJM#testSecureMode sometimes fails with
    timeouts (Xiao Chen via jlowe)

    HDFS-8915. TestFSNamesystem.testFSLockGetWaiterCount fails intermittently.
    (Masatake Iwasaki via kihwal)

    HDFS-10693. metaSave should print blocks, not LightWeightHashSet.
    (Yuanbo Liu via shv)

    HDFS-10694. processReport() should print blockReportId in each log message.
    (Yuanbo Liu via shv)
