@@ -97,6 +97,8 @@ Release 2.7.4 - UNRELEASED
     HDFS-9726. Refactor IBR code to a new class. (Tsz-Wo Nicholas Sze
     Backport HDFS-11839 by Vinitha Reddy Gankidi)
 
+    HDFS-10619. Cache path in InodesInPath. (daryn via kihwal, backported by zhz)
+
   OPTIMIZATIONS
 
     HDFS-10896. Move lock logging logic from FSNamesystem into FSNamesystemLock.
